use spring config and validation